crates/squealy/tests/compile_fail/insert_select_after_setter_rejected.stderr
error[E0599]: no method named `insert_select` found for struct `__SquealyUserWriteBuilder<'_, TestConnection, HCons<squealy::InsertAssignment<UserName, squealy::StaticAssignmentValue<std::string::String>>, HNil>, HCons<squealy::UpdateAssignment<UserName, squealy::StaticAssignmentValue<std::string::String>>, HNil>, HNil, squealy::MutationUnfiltered, __SquealyUserNameWriteInsertSet, __SquealyUserNameWriteUpdateSet>` in the current scope
  --> tests/compile_fail/insert_select_after_setter_rejected.rs:15:48
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ----- method `insert_select` not found for this struct
...
15 |     let _query = conn.to::<User>().name("Ada").insert_select(
   |                  ------------------------------^^^^^^^^^^^^^ method not found in `__SquealyUserWriteBuilder<'_, TestConnection, HCons<squealy::InsertAssignment<UserName, squealy::StaticAssignmentValue<std::string::String>>, HNil>, HCons<squealy::UpdateAssignment<UserName, squealy::StaticAssignmentValue<std::string::String>>, HNil>, HNil, squealy::MutationUnfiltered, __SquealyUserNameWriteInsertSet, __SquealyUserNameWriteUpdateSet>`
   |
   = note: the method was found for `__SquealyUserWriteBuilder<'conn, Conn, HNil, HNil, HNil, squealy::MutationUnfiltered, __SquealyUserNameWriteInsertState, __SquealyUserNameWriteUpdateState>`
